--- a/content/themes/elements/sass/layout/_main.scss
+++ b/content/themes/elements/sass/layout/_main.scss
@@ -1,8 +1,12 @@
 main{
+  z-index: $zIndex-main;
+  
   height: auto !important;
   height: 100%;
   min-height: 100%;
   overflow: hidden;
+  padding-left: $column-gutter / 2;
+  padding-right: $column-gutter / 2;
+  
   background: $white;
-  z-index: $zIndex-main;
 }
