--- a/content/themes/elements/sass/app.scss
+++ b/content/themes/elements/sass/app.scss
@@ -19,7 +19,8 @@
   "layout/_html",
   "layout/_main",
   "layout/_header",
-  "layout/_footer";
+  "layout/_footer",
+  "layout/_home";
   
 // MODULES
 @import
