--- a/content/themes/elements/css/app.css
+++ b/content/themes/elements/css/app.css
@@ -1,4 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
 [class*="grid-"] {
   display: block;
   padding: 0;
@@ -1319,20 +1318,23 @@ ul {
 .margin-b100 {
   margin-bottom: 6.25rem !important; }
 
-h1, h2, p, a {
-  font-family: 'Open Sans', sans-serif;
-  font-style: normal;
-  font-size: 16px;
+h1, h2, p, form input, a {
+  font-family: 'source-sans-pro', sans-serif;
   font-weight: normal;
-  text-rendering: geometricPrecision; }
-  h1.is_bold, h2.is_bold, p.is_bold, a.is_bold {
-    font-weight: 700; }
+  font-size: 16px;
+  font-weight: 100; }
 
 h1, h2 {
-  font-size: 3em; }
+  color: white;
+  font-size: 90px;
+  font-weight: 900; }
 
 h2 {
   font-size: 2em; }
+
+p, form input {
+  font-size: 16px;
+  font-weight: 100; }
 
 a {
   color: black;
@@ -1393,7 +1395,7 @@ footer {
   footer > img {
     max-width: 250px;
     margin-bottom: 50px; }
-  footer p {
+  footer p, footer form input, form footer input {
     margin-bottom: 1em; }
   footer ul li {
     width: 35px;
@@ -1408,6 +1410,17 @@ body.home main {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center; }
+    body.home main div > p, body.home main form div > input, form body.home main div > input {
+      right: 0;
+      bottom: 15px;
+      left: 0;
+      position: absolute;
+      text-align: center;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      font-size: 14px; }
+      body.home main div > p a, body.home main form div > input a, form body.home main div > input a {
+        font-size: 14px; }
 
 ul {
   padding-top: 1.875rem !important; }
@@ -1494,6 +1507,46 @@ ul {
   100% {
     transform: rotate(360deg);
     transform: rotate(360deg); } }
+form {
+  display: -webkit-box;
+  /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;
+  /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flex;
+  /* TWEENER - IE 10 */
+  display: -webkit-flex;
+  /* NEW - Chrome */
+  display: flex;
+  /* NEW, Spec - Opera 12.1, Firefox 20+ */
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  justify-content: center;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  width: 600px;
+  height: 100%;
+  margin: auto;
+  text-align: center; }
+  form input {
+    width: 100%;
+    height: 50px;
+    padding: 0 1em;
+    -webkit-appearance: none;
+    outline: 0;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); }
+    form input::-webkit-input-placeholder {
+      color: #d2d2d2;
+      letter-spacing: 1.2px; }
+
 /*
  * Show and Hide class functions
  */
@@ -1739,30 +1792,30 @@ section.has_extra-padBottom,
 .section_image .section_body.is_positioned-right {
   text-align: right; }
 
-h1.is_italic, h2.is_italic, p.is_italic, a.is_italic {
+h1.is_italic, h2.is_italic, p.is_italic, form input.is_italic, a.is_italic {
   font-style: italic; }
-h1.is_underlined, h2.is_underlined, p.is_underlined, a.is_underlined {
+h1.is_underlined, h2.is_underlined, p.is_underlined, form input.is_underlined, a.is_underlined {
   text-decoration: underline; }
-h1.is_capitalized, h2.is_capitalized, p.is_capitalized, a.is_capitalized {
+h1.is_capitalized, h2.is_capitalized, p.is_capitalized, form input.is_capitalized, a.is_capitalized {
   text-transform: capitalize; }
-h1.is_uppercase, h2.is_uppercase, p.is_uppercase, a.is_uppercase {
+h1.is_uppercase, h2.is_uppercase, p.is_uppercase, form input.is_uppercase, a.is_uppercase {
   text-transform: uppercase; }
-h1.is_lowercase, h2.is_lowercase, p.is_lowercase, a.is_lowercase {
+h1.is_lowercase, h2.is_lowercase, p.is_lowercase, form input.is_lowercase, a.is_lowercase {
   text-transform: lowercase; }
-h1.is_bold, h2.is_bold, p.is_bold, a.is_bold {
+h1.is_bold, h2.is_bold, p.is_bold, form input.is_bold, a.is_bold {
   font-weight: 700; }
-h1.is_aligned-center, h2.is_aligned-center, p.is_aligned-center, a.is_aligned-center {
+h1.is_aligned-center, h2.is_aligned-center, p.is_aligned-center, form input.is_aligned-center, a.is_aligned-center {
   text-align: center; }
-h1.is_aligned-left, h2.is_aligned-left, p.is_aligned-left, a.is_aligned-left {
+h1.is_aligned-left, h2.is_aligned-left, p.is_aligned-left, form input.is_aligned-left, a.is_aligned-left {
   text-align: left; }
-h1.is_aligned-right, h2.is_aligned-right, p.is_aligned-right, a.is_aligned-right {
+h1.is_aligned-right, h2.is_aligned-right, p.is_aligned-right, form input.is_aligned-right, a.is_aligned-right {
   text-align: right; }
-h1.is_black, h2.is_black, p.is_black, a.is_black {
+h1.is_black, h2.is_black, p.is_black, form input.is_black, a.is_black {
   color: black; }
-h1.is_white, h2.is_white, p.is_white, a.is_white {
+h1.is_white, h2.is_white, p.is_white, form input.is_white, a.is_white {
   color: white; }
 
-p.is_small {
+p.is_small, form input.is_small {
   font-size: 15px; }
 
 .is-stretched-wrapper {
