--- a/content/themes/elements/sass/base/typo/_fonts.scss
+++ b/content/themes/elements/sass/base/typo/_fonts.scss
@@ -1,10 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
-
-@mixin opensans{
-  font-family: 'Open Sans', sans-serif;
-  font-style: normal;
-  
-  &.is_bold{
-    font-weight: 700;
-  }
+@mixin source{
+  font-family: 'source-sans-pro', sans-serif;
+  font-weight: normal;
 }
