--- a/content/themes/elements/sass/base/typo/_typography.scss
+++ b/content/themes/elements/sass/base/typo/_typography.scss
@@ -1,28 +1,35 @@
 %base{
-  @include opensans;
+  @include source;
+  
   font-size: 16px;
-  font-weight: normal;
-  text-rendering: geometricPrecision;
+  font-weight: 100;
 }
 
 h1{
   @extend %base;
-  font-size: 3em;
+  
+  color: $white;
+  font-size: 90px;
+  font-weight: 900;
 }
 
 h2{
   @extend h1;
+  
   font-size: 2em;
 }
 
 p{
   @extend %base;
+  
+  font-size: 16px;
+  font-weight: 100;
 }
 
 a{
   @extend %base;
   
-  color: black;
+  color: $black;
   text-decoration: underline;
   cursor: pointer;
   
