--- a/content/themes/elements/css/app.css
+++ b/content/themes/elements/css/app.css
@@ -1359,6 +1359,54 @@ main {
   padding-right: 0.9375rem;
   background: white; }
 
+main {
+  padding: 0; }
+  main > div {
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center; }
+    main > div .featured-title {
+      right: 0;
+      bottom: 15px;
+      left: 0;
+      position: absolute;
+      text-align: center;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      font-size: 14px; }
+      main > div .featured-title a {
+        font-size: 14px; }
+
+.inner {
+  display: -webkit-box;
+  /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;
+  /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flex;
+  /* TWEENER - IE 10 */
+  display: -webkit-flex;
+  /* NEW - Chrome */
+  display: flex;
+  /* NEW, Spec - Opera 12.1, Firefox 20+ */
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  justify-content: center;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  width: 600px;
+  height: 100%;
+  margin: auto;
+  text-align: center; }
+
 header {
   display: -webkit-box;
   /* OLD - iOS 6-, Safari 3.1-6 */
@@ -1401,26 +1449,6 @@ footer {
     width: 35px;
     padding: 0 .5em;
     display: inline-block; }
-
-body.home main {
-  padding: 0; }
-  body.home main div {
-    width: 100%;
-    height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center; }
-    body.home main div > p, body.home main form div > input, form body.home main div > input {
-      right: 0;
-      bottom: 15px;
-      left: 0;
-      position: absolute;
-      text-align: center;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      font-size: 14px; }
-      body.home main div > p a, body.home main form div > input a, form body.home main div > input a {
-        font-size: 14px; }
 
 ul {
   padding-top: 1.875rem !important; }
@@ -1507,45 +1535,18 @@ ul {
   100% {
     transform: rotate(360deg);
     transform: rotate(360deg); } }
-form {
-  display: -webkit-box;
-  /* OLD - iOS 6-, Safari 3.1-6 */
-  display: -moz-box;
-  /* OLD - Firefox 19- (buggy but mostly works) */
-  display: -ms-flex;
-  /* TWEENER - IE 10 */
-  display: -webkit-flex;
-  /* NEW - Chrome */
-  display: flex;
-  /* NEW, Spec - Opera 12.1, Firefox 20+ */
-  -webkit-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  -moz-justify-content: center;
-  justify-content: center;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  position: absolute;
-  width: 600px;
-  height: 100%;
-  margin: auto;
-  text-align: center; }
-  form input {
-    width: 100%;
-    height: 50px;
-    padding: 0 1em;
-    -webkit-appearance: none;
-    outline: 0;
-    border: none;
-    border-radius: 3px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); }
-    form input::-webkit-input-placeholder {
-      color: #d2d2d2;
-      letter-spacing: 1.2px; }
+form input {
+  width: 100%;
+  height: 50px;
+  padding: 0 1em;
+  -webkit-appearance: none;
+  outline: 0;
+  border: none;
+  border-radius: 3px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); }
+  form input::-webkit-input-placeholder {
+    color: #d2d2d2;
+    letter-spacing: 1.2px; }
 
 /*
  * Show and Hide class functions
