--- a/content/themes/elements/sass/layout/_main.scss
+++ b/content/themes/elements/sass/layout/_main.scss
@@ -10,3 +10,50 @@ main{
   
   background: $white;
 }
+
+main{
+  padding: 0;
+  
+  > div{
+    width: 100%;
+    height: 100vh;
+    
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    
+    .featured-title{
+      right: 0;
+      bottom: 15px;
+      left: 0;
+      position: absolute;
+      
+      text-align: center;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      font-size: 14px;
+      
+      a{
+        font-size: 14px;
+      }
+    }
+  }
+}
+
+.inner{
+  @include flex;
+  @include flex-direction( column );
+  @include justify-content( center );
+  
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  
+  width: 600px;
+  height: 100%;
+  margin: auto;
+  
+  text-align: center;
+}
