cleaned sass files

--- a/content/themes/elements/sass/app.scss
+++ b/content/themes/elements/sass/app.scss
@@ -19,14 +19,14 @@
   "layout/_html",
   "layout/_main",
   "layout/_header",
-  "layout/_footer",
-  "layout/_home";
+  "layout/_footer";
   
 // MODULES
 @import
   "modules/_grid",
   "modules/_pace",
-  "modules/_form";
+  "modules/_form",
+  "modules/_featured";
   
 // STATE
 @import
