--- a/content/themes/elements/css/app.css
+++ b/content/themes/elements/css/app.css
@@ -1355,57 +1355,7 @@ main {
   height: 100%;
   min-height: 100%;
   overflow: hidden;
-  padding-left: 0.9375rem;
-  padding-right: 0.9375rem;
   background: white; }
-
-main {
-  padding: 0; }
-  main > div {
-    width: 100%;
-    height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center; }
-    main > div .featured-title {
-      right: 0;
-      bottom: 15px;
-      left: 0;
-      position: absolute;
-      text-align: center;
-      text-transform: uppercase;
-      letter-spacing: 2px;
-      font-size: 14px; }
-      main > div .featured-title a {
-        font-size: 14px; }
-
-.inner {
-  display: -webkit-box;
-  /* OLD - iOS 6-, Safari 3.1-6 */
-  display: -moz-box;
-  /* OLD - Firefox 19- (buggy but mostly works) */
-  display: -ms-flex;
-  /* TWEENER - IE 10 */
-  display: -webkit-flex;
-  /* NEW - Chrome */
-  display: flex;
-  /* NEW, Spec - Opera 12.1, Firefox 20+ */
-  -webkit-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  -moz-justify-content: center;
-  justify-content: center;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  position: absolute;
-  width: 600px;
-  height: 100%;
-  margin: auto;
-  text-align: center; }
 
 header {
   display: -webkit-box;
@@ -1547,6 +1497,51 @@ form input {
   form input::-webkit-input-placeholder {
     color: #d2d2d2;
     letter-spacing: 1.2px; }
+
+.featured {
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center; }
+  .featured .inner {
+    display: -webkit-box;
+    /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;
+    /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flex;
+    /* TWEENER - IE 10 */
+    display: -webkit-flex;
+    /* NEW - Chrome */
+    display: flex;
+    /* NEW, Spec - Opera 12.1, Firefox 20+ */
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+    justify-content: center;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    width: 600px;
+    height: 100%;
+    margin: auto;
+    text-align: center; }
+  .featured .featured-title {
+    right: 0;
+    bottom: 15px;
+    left: 0;
+    position: absolute;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 14px; }
+    .featured .featured-title a {
+      font-size: 14px; }
 
 /*
  * Show and Hide class functions
