--- a/content/themes/elements/css/app.css
+++ b/content/themes/elements/css/app.css
@@ -1401,7 +1401,9 @@ footer {
     display: inline-block; }
 
 ul {
-  padding-top: 1.875rem !important; }
+  padding-top: 1.875rem !important;
+  padding-left: 0.9375rem;
+  padding-right: 0.9375rem; }
   ul li {
     margin-bottom: 1.875rem; }
 
@@ -1542,6 +1544,11 @@ form input {
     font-size: 14px; }
     .featured .featured-title a {
       font-size: 14px; }
+
+.error {
+  padding: .5em;
+  background: #ff2d46;
+  border-radius: 3px; }
 
 /*
  * Show and Hide class functions
@@ -1736,58 +1743,6 @@ form input {
   display: block;
   margin: auto; }
 
-section.has_no-pad,
-.section_header.has_no-pad,
-.section_body.has_no-pad,
-.section_footer.has_no-pad {
-  padding-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0; }
-section.has_no-padTop,
-.section_header.has_no-padTop,
-.section_body.has_no-padTop,
-.section_footer.has_no-padTop {
-  padding-top: 0; }
-section.has_no-padBottom,
-.section_header.has_no-padBottom,
-.section_body.has_no-padBottom,
-.section_footer.has_no-padBottom {
-  padding-bottom: 0; }
-section.has_no-padLeft,
-.section_header.has_no-padLeft,
-.section_body.has_no-padLeft,
-.section_footer.has_no-padLeft {
-  padding-left: 0; }
-section.has_no-padRight,
-.section_header.has_no-padRight,
-.section_body.has_no-padRight,
-.section_footer.has_no-padRight {
-  padding-right: 0; }
-section.has_no-padSides,
-.section_header.has_no-padSides,
-.section_body.has_no-padSides,
-.section_footer.has_no-padSides {
-  padding-left: 0;
-  padding-right: 0; }
-section.has_extra-padTop,
-.section_header.has_extra-padTop,
-.section_body.has_extra-padTop,
-.section_footer.has_extra-padTop {
-  padding-top: 7.5rem; }
-section.has_extra-padBottom,
-.section_header.has_extra-padBottom,
-.section_body.has_extra-padBottom,
-.section_footer.has_extra-padBottom {
-  padding-bottom: 7.5rem; }
-
-.section_image .section_body.is_positioned-left {
-  text-align: left; }
-.section_image .section_body.is_positioned-center {
-  text-align: center; }
-.section_image .section_body.is_positioned-right {
-  text-align: right; }
-
 h1.is_italic, h2.is_italic, p.is_italic, form input.is_italic, a.is_italic {
   font-style: italic; }
 h1.is_underlined, h2.is_underlined, p.is_underlined, form input.is_underlined, a.is_underlined {
@@ -1814,30 +1769,6 @@ h1.is_white, h2.is_white, p.is_white, form input.is_white, a.is_white {
 p.is_small, form input.is_small {
   font-size: 15px; }
 
-.is-stretched-wrapper {
-  position: relative;
-  width: 100%;
-  height: 100%; }
-
-.is-stretched-object {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  max-width: none;
-  -moz-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%); }
-  .is-stretched-object.is-stretched-wide {
-    width: 100%;
-    min-height: 100%;
-    height: auto; }
-  .is-stretched-object.is-stretched-high {
-    height: 100%;
-    min-width: 100%;
-    width: auto; }
-
 body main {
   opacity: 1;
   visibility: visible;
@@ -1855,11 +1786,3 @@ body.is-loading main {
   -ms-transition: 1.5s;
   -o-transition: 1.5s;
   transition: 1.5s; }
-
-.is-fullwidth {
-  width: calc(100% + (3.75rem * 2));
-  margin-left: -3.75rem; }
-
-@media only screen and (max-width: 43.75em) {
-  .is-fullwidth {
-    margin-left: -1.875rem; } }
