--- a/content/themes/elements/sass/modules/_grid.scss
+++ b/content/themes/elements/sass/modules/_grid.scss
@@ -1,7 +1,5 @@
-ul{
+[class*="grid-"]{
   padding-top: $column-gutter !important;
-  padding-left: $column-gutter / 2;
-  padding-right: $column-gutter / 2;
   
   li{
     margin-bottom: $column-gutter;
