--- a/content/themes/elements/sass/modules/_featured.scss
+++ b/content/themes/elements/sass/modules/_featured.scss
@@ -1,6 +1,7 @@
 .featured{
-  width: 100%;
+  width: calc(100% + $column-gutter);
   height: 100vh;
+  margin-left: -$column-gutter / 2;
   
   background-size: cover;
   background-repeat: no-repeat;
